# stalwart-mail-server

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.fdb  README.md  SECURITY.md  SECURITY_PROCESS.md  SECURITY_TEMPLATE.md  UPGRADING.md  install.sh  install.sh.new
crates/coordinator/: Cargo.toml
crates/coordinator/src/: bootstrap.rs  dispatch.rs  lib.rs
crates/coordinator/src/backend/: mod.rs
crates/dav-proto/: Cargo.toml
crates/dav-proto/resources/requests/: mkcol-002.json  propertyupdate-001.json  report-014.json  report-015.json  report-017.json  report-018.json
crates/dav-proto/resources/responses/: 019.xml  020.xml
crates/dav-proto/src/: lib.rs
crates/dav-proto/src/parser/: header.rs  mod.rs  property.rs  tokenizer.rs
crates/dav-proto/src/requests/: acl.rs  lockinfo.rs  mkcol.rs  mod.rs  propertyupdate.rs  propfind.rs  report.rs
crates/dav-proto/src/responses/: acl.rs  error.rs  lock.rs  mkcol.rs  mod.rs  multistatus.rs  property.rs  propstat.rs  schedule.rs
crates/dav-proto/src/schema/: property.rs  request.rs  response.rs
crates/directory/: Cargo.toml
crates/directory/src/: lib.rs
crates/directory/src/backend/: mod.rs
crates/directory/src/core/: config.rs  dispatch.rs  mod.rs  principal.rs  sasl.rs  secret.rs
crates/groupware/: Cargo.toml
crates/groupware/src/: lib.rs
crates/groupware/src/cache/: calcard.rs  file.rs  mod.rs
crates/groupware/src/calendar/: alarm.rs  dates.rs  expand.rs  index.rs  itip.rs  mod.rs  storage.rs
crates/groupware/src/contact/: index.rs  mod.rs  storage.rs
crates/groupware/src/file/: index.rs  mod.rs  storage.rs
crates/groupware/src/scheduling/: attendee.rs  event_cancel.rs  event_create.rs  event_update.rs  inbound.rs  itip.rs  mod.rs  organizer.rs  snapshot.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs  request.rs
crates/http/src/api/: diagnose.rs  mod.rs  telemetry.rs
crates/http/src/auth/: authenticate.rs  mod.rs  permissions.rs
crates/http/src/autoconfig/: mod.rs
crates/http/src/form/: mod.rs
crates/http/src/management/: crypto.rs  diagnose.rs  mod.rs  principal.rs  queue.rs  reload.rs  report.rs  settings.rs  spam.rs  stores.rs  telemetry.rs  troubleshoot.rs
crates/imap/: Cargo.toml
crates/imap/src/: lib.rs
crates/imap/src/core/: client.rs  mailbox.rs  message.rs  mod.rs  session.rs
crates/imap/src/op/: acl.rs  append.rs  authenticate.rs  capability.rs  close.rs  copy_move.rs  create.rs  delete.rs  enable.rs  expunge.rs  fetch.rs  idle.rs  list.rs  login.rs  logout.rs  namespace.rs  noop.rs  quota.rs  rename.rs  search.rs  select.rs  status.rs  store.rs  subscribe.rs  thread.rs
crates/jmap/: Cargo.toml
crates/jmap-proto/: Cargo.toml
crates/jmap-proto/src/: lib.rs
crates/jmap-proto/src/error/: method.rs  request.rs  set.rs
crates/jmap-proto/src/method/: availability.rs  changes.rs  copy.rs  get.rs  import.rs  lookup.rs  mod.rs  parse.rs  query.rs  query_changes.rs  search_snippet.rs  set.rs  upload.rs  validate.rs
crates/jmap-proto/src/object/: addressbook.rs  blob.rs  calendar.rs  calendar_event.rs  calendar_event_notification.rs  contact.rs  email.rs  email_submission.rs  file_node.rs  identity.rs  mailbox.rs  mod.rs  participant_identity.rs  principal.rs  push_subscription.rs  quota.rs  registry.rs  search_snippet.rs  share_notification.rs  sieve.rs  thread.rs  vacation_response.rs
crates/jmap-proto/src/references/: eval.rs  jsptr.rs  mod.rs  resolve.rs
crates/jmap-proto/src/request/: capability.rs  deserialize.rs  method.rs  mod.rs  parser.rs  reference.rs  websocket.rs
crates/jmap-proto/src/response/: mod.rs  references.rs  serialize.rs  status.rs
crates/jmap-proto/src/types/: acl.rs  any_id.rs  blob.rs  collection.rs  date.rs  id.rs  keyword.rs  mod.rs  property.rs  state.rs  type_state.rs  value.rs
crates/jmap/src/: lib.rs
crates/jmap/src/addressbook/: get.rs  set.rs
crates/jmap/src/api/: acl.rs  auth.rs  event_source.rs  mod.rs  query.rs  request.rs  session.rs
crates/jmap/src/blob/: copy.rs  download.rs  get.rs  mod.rs  upload.rs
crates/jmap/src/calendar/: get.rs  mod.rs  set.rs
crates/jmap/src/calendar_event/: copy.rs  get.rs  mod.rs  parse.rs  query.rs  set.rs
crates/jmap/src/calendar_event_notification/: get.rs  query.rs  set.rs
crates/jmap/src/changes/: get.rs  query.rs  state.rs
crates/jmap/src/contact/: copy.rs  get.rs  mod.rs  parse.rs  query.rs  set.rs
crates/jmap/src/email/: body.rs  copy.rs  (+8 more)
crates/main/: Cargo.toml
crates/main/src/: main.rs  test_data.rs
crates/migration/: Cargo.toml
crates/migration/src/: addressbook_v2.rs  blob.rs  calendar.rs  calendar_v2.rs  contact_v2.rs  destroy.rs  email.rs  email_v1.rs  email_v2.rs  encryption.rs  encryption_v1.rs  encryption_v2.rs  event_v1.rs  event_v2.rs  identity.rs  identity_v1.rs  identity_v2.rs  lib.rs  mailbox.rs  object.rs  principal.rs  principal_v1.rs  principal_v2.rs  push.rs  push_v1.rs  push_v2.rs  queue.rs  queue_v1.rs  queue_v2.rs  sieve.rs  sieve_v1.rs  sieve_v2.rs  submission.rs  tasks.rs  tasks_v1.rs  tasks_v2.rs  threads.rs  v011.rs  v012.rs  v013.rs  (+2 more)
crates/nlp/: Cargo.toml
crates/nlp/src/: lib.rs
crates/pop3/: Cargo.toml
crates/pop3/src/: client.rs  lib.rs  mailbox.rs  session.rs
crates/registry/: Cargo.toml
crates/registry/src/: jmap.rs  lib.rs  pickle.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/smtp/: Cargo.toml
crates/smtp/src/: lib.rs
crates/spam-filter/: Cargo.toml
crates/spam-filter/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: config.rs  lib.rs
crates/trc/: Cargo.toml
crates/trc/event-macro/: Cargo.toml
crates/trc/src/: lib.rs  macros.rs
crates/types/: Cargo.toml
crates/types/src/: acl.rs  blob.rs  blob_hash.rs  collection.rs  dead_property.rs  field.rs  id.rs  keyword.rs  lib.rs  semver.rs  special_use.rs  type_state.rs
crates/utils/: Cargo.toml
crates/utils/proc-macros/: Cargo.toml
crates/utils/src/: cache.rs  chained_bytes.rs  cheeky_hash.rs  cron.rs  glob.rs  http.rs  lib.rs  snowflake.rs  template.rs  tls.rs
(+990 files in other folders)
