[package]
name = "coordinator"
version = "0.15.4"
edition = "2024"

[dependencies]
utils = { path =  "../utils" }
store = { path =  "../store" }
registry = { path =  "../registry" }
trc = { path = "../trc" }
futures = { version = "0.3", optional = true }
tokio = { version = "1.47", features = ["sync", "fs", "io-util"] }
async-nats = { version = "0.44", default-features = false, features = ["server_2_10", "server_2_11", "ring"], optional = true }
zenoh = { version = "1.3.4", default-features = false, features = ["auth_pubkey", "transport_multilink", "transport_compression", "transport_quic", "transport_tcp", "transport_tls", "transport_udp"], optional = true }
rdkafka = { version = "0.38", features = ["cmake-build"], optional = true }
redis = { version = "0.32", features = [ "tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure", "tls-rustls-webpki-roots", "cluster-async"], optional = true }

[features]
nats = ["async-nats"]
zenoh = ["dep:zenoh"]
kafka = ["rdkafka"]
redis = ["dep:redis", "futures"]
enterprise = []
test_mode = []
