[package]
name = "dav-proto"
version = "0.15.3"
edition = "2024"

[dependencies]
trc = { path = "../trc" }
types = { path = "../types" }
hashify = "0.2.6"
quick-xml = { version = "0.38" }
calcard = { version = "0.3", features = ["rkyv"] }
mail-parser = { version = "0.11", features = ["full_encoding", "rkyv"] }
hyper = "1.6.0"
rkyv = { version = "0.8.10", features = ["little_endian"] }
chrono = { version = "0.4.40", features = ["serde"], optional = true }
compact_str = "0.9.0"

[dev-dependencies]
calcard = { version = "0.3", features = ["serde", "rkyv"] }
types = { path = "../types", features = ["test_mode"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = { version = "0.4.40", features = ["serde"] }

[features]
test_mode = ["chrono"]
enterprise = []
