[package]
name = "directory"
version = "0.16.4"
edition = "2024"

[dependencies]
utils = { path =  "../utils" }
proc_macros = { path =  "../utils/proc-macros" }
store = { path =  "../store" }
trc = { path = "../trc" }
nlp = { path = "../nlp" }
types = { path = "../types" }
registry = { path = "../registry" }
mail-parser = { version = "0.11" }
mail-builder = { version = "0.4" } 
tokio = { version = "1.47", features = ["net"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }
rustls = { version = "0.23.5", default-features = false, features = ["std", "aws_lc_rs", "tls12"] }
rustls-pki-types = { version = "1" }
ldap3 = { version = "0.12", default-features = false, features = ["tls-rustls-aws-lc-rs"] }
deadpool = { version = "0.10", features = ["managed", "rt_tokio_1"] }
async-trait = "0.1.68"
ahash = { version = "0.8" }
pwhash = "1"
argon2 = "0.5.0"
pbkdf2 = {version = "0.12.1", features = ["simple"] }
scrypt = "0.11.0"
sha1 = "0.11"
sha2 = "0.11"
md5 = "0.8.0"
futures = "0.3"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"]}
totp-rs = { version = "5.5.1", features = ["otpauth"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
serde_json = "1.0"
base64 = "0.22"
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = { version = "0.9.0", features = ["rkyv", "serde"] }
nohash-hasher = "0.2.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }

[features]
test_mode = []
enterprise = []
mysql = []
postgres = []
sqlite = []
