[package]
name = "groupware"
version = "0.15.3"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
store = { path = "../store" }
common = { path =  "../common" }
types = { path = "../types" }
trc = { path = "../trc" }
nlp = { path = "../nlp" }
directory = { path =  "../directory" }
calcard = { version = "0.3", features = ["rkyv"] }
hashify = "0.2"
tokio = { version = "1.47", features = ["net", "macros"] }
rkyv = { version = "0.8.10", features = ["little_endian"] }
percent-encoding = "2.3.1"
compact_str = "0.9.0"
ahash = { version = "0.8" }
chrono = "0.4.40"

[features]
test_mode = []
enterprise = []

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
