[package]
name = "http"
version = "0.16.4"
edition = "2024"

[dependencies]
store = { path = "../store" }
common = { path =  "../common" }
utils = { path =  "../utils" }
trc = { path = "../trc" }
email = { path = "../email" }
smtp = { path = "../smtp" }
jmap = { path = "../jmap" }
dav = { path = "../dav" }
groupware = { path = "../groupware" }
spam-filter = { path = "../spam-filter" }
http_proto = { path = "../http-proto" }
jmap_proto = { path = "../jmap-proto" }
types = { path = "../types" }
directory = { path =  "../directory" }
services = { path =  "../services" }
registry = { path =  "../registry" }
smtp-proto = { version = "0.2" }
mail-parser = { version = "0.11", features = ["full_encoding", "rkyv"] } 
mail-builder = { version = "0.4" }
mail-auth = { version = "0.8", features = ["generate"] }
tokio = { version = "1.47", features = ["rt"] }
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
http-body-util = "0.1.0"
async-stream = "0.3.5"
quick-xml = "0.39"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
x509-parser = "0.18"
chrono = "0.4"
base64 = "0.22"
pkcs8 = { version = "0.10.2", features = ["alloc", "std"] }
rsa = "0.9.2"
sha1 = "0.11"
sha2 = "0.11"
rkyv = { version = "0.8.10", features = ["little_endian"] }
form-data = { version = "0.6.0", features = ["sync"], default-features = false }
mime = "0.3.17"
compact_str = "0.9.0"
hashify = { version = "0.2" }

[dev-dependencies]

[features]
test_mode = []
dev_mode = []
enterprise = []
