[package]
name = "imap"
version = "0.16.0"
edition = "2024"

[dependencies]
imap_proto = { path = "../imap-proto" }
types = { path = "../types" }
directory = { path = "../directory" }
trc = { path = "../trc" }
store = { path = "../store" }
common = { path = "../common" }
email = { path = "../email" }
nlp = { path = "../nlp" }
utils = { path = "../utils" }
registry = { path = "../registry" }
mail-parser = { version = "0.11", features = ["full_encoding"] } 
rustls = { version = "0.23.5", default-features = false, features = ["std", "aws_lc_rs", "tls12"] }
rustls-pemfile = "2.0"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }
parking_lot = "0.12"
ahash = { version = "0.8" }
md5 = "0.8.0"
rand = "0.9.0"
indexmap = "2.7.1"
compact_str = "0.9.0"

[features]
test_mode = []
