[package]
name = "jmap_proto"
version = "0.15.3"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
types = { path = "../types" }
trc = { path = "../trc" }
jmap-tools = { version = "0.1" }
calcard = { version = "0.3" }
mail-parser = { version = "0.11", features = ["full_encoding", "rkyv"] } 
serde = { version = "1.0", features = ["derive"]}
ahash = { version = "0.8.2", features = ["serde"] }
serde_json = { version = "1.0", features = ["raw_value"] }
hashify = "0.2"
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = { version = "0.9.0", features = ["rkyv", "serde"] }

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
