[package]
name = "migration"
version = "0.15.3"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
nlp = { path = "../nlp" }
store = { path = "../store" }
trc = { path = "../trc" }
types = { path = "../types" }
common = { path =  "../common" }
email = { path =  "../email" }
directory = { path =  "../directory" }
smtp = { path =  "../smtp" }
groupware = { path =  "../groupware" }
dav-proto = { path =  "../dav-proto" }
proc_macros = { path =  "../utils/proc-macros" }
mail-parser = { version = "0.11", features = ["full_encoding"] } 
mail-auth = { version = "0.7.1", features = ["rkyv"] }
smtp-proto = { version = "0.2", features = ["rkyv", "serde"] }
sieve-rs = { version = "0.7", features = ["rkyv"] } 
calcard_latest = { package = "calcard", version = "0.3", features = ["rkyv"] }
calcard_v01 = { package = "calcard", version = "0.1", features = ["rkyv"] }
tokio = { version = "1.47", features = ["net", "macros"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = "0.9.0"
bincode = "1.3.3" 
lz4_flex = { version = "0.12", default-features = false } 
base64 = "0.22"
futures = "0.3"
num_cpus = "1.13.1"

[features]
test_mode = []
enterprise = []

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
