[package]
name = "migration"
version = "0.16.4"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
nlp = { path = "../nlp" }
store = { path = "../store" }
trc = { path = "../trc" }
types = { path = "../types" }
common = { path =  "../common" }
email = { path =  "../email" }
directory = { path =  "../directory" }
smtp = { path =  "../smtp" }
spam-filter = { path =  "../spam-filter" }
registry = { path =  "../registry" }
proc_macros = { path =  "../utils/proc-macros" }
tokio = { version = "1.47", features = ["net", "macros"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = "0.9.0"
lz4_flex = { version = "0.13", default-features = false } 
base64 = "0.22"
futures = "0.3"
num_cpus = "1.13.1"

[features]
test_mode = []
enterprise = []

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
