[package]
name = "nlp"
version = "0.15.3"
edition = "2024"

[dependencies]
utils = { path =  "../utils" }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
serde = { version = "1.0", features = ["derive"]}
nohash = "0.2.0"
ahash = { version = "0.8.3", features = ["serde"] }
whatlang = "0.18" # Language detection
rust-stemmers = "1.2" # Stemmers
jieba-rs = "0.8" # Chinese stemmer
lru-cache = "0.1.2"
parking_lot = "0.12.1"
psl = "2"
maplit = "1.0.2"
hashify = "0.2.1"
rand = "0.9.2"
rkyv = { version = "0.8.10", features = ["little_endian"] }

[features]
test_mode = []

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
bincode = "1.3.3"
