[package]
name = "pop3"
version = "0.16.4"
edition = "2024"

[dependencies]
store = { path = "../store" }
common = { path = "../common" }
directory = { path = "../directory" }
imap = { path = "../imap" }
utils = { path = "../utils" }
trc = { path = "../trc" }
types = { path = "../types" }
email = { path = "../email" }
registry = { path = "../registry" }
mail-parser = { version = "0.11", features = ["full_encoding"] } 
rustls = { version = "0.23.5", default-features = false, features = ["std", "aws_lc_rs", "tls12"] }
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }

[features]
test_mode = []
