[package]
name = "registry"
version = "0.15.4"
edition = "2024"

[dependencies]
utils = { path =  "../utils" }
trc = { path = "../trc" }
types = { path = "../types" }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
hashify = "0.2.7"
ahash = { version = "0.8" }
jmap-tools = { version = "0.1" }

[features]
test_mode = []
enterprise = []
