[package]
name = "smtp"
description = "Stalwart SMTP Server"
authors = [ "Stalwart Labs LLC <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/smtp-server"
homepage = "https://stalw.art/smtp"
keywords = ["smtp", "email", "mail", "server"]
categories = ["email"]
license = "AGPL-3.0-only OR LicenseRef-SEL"
version = "0.16.0"
edition = "2024"

[dependencies]
store = { path =  "../store" }
types = { path =  "../types" }
utils = { path =  "../utils" }
nlp = { path =  "../nlp" }
directory = { path =  "../directory" }
common = { path =  "../common" }
email = { path =  "../email" }
registry = { path =  "../registry" }
spam-filter = { path =  "../spam-filter" }
trc = { path = "../trc" }
mail-auth = { version = "0.8", features = ["rkyv"] }
mail-parser = { version = "0.11", features = ["full_encoding"] } 
mail-builder = { version = "0.4" } 
smtp-proto = { version = "0.2", features = ["rkyv", "serde"] }
sieve-rs = { version = "0.7", features = ["rkyv"] } 
ahash = { version = "0.8" }
rustls = { version = "0.23.5", default-features = false, features = ["std", "aws_lc_rs", "tls12"] }
rustls-pemfile = "2.0"
rustls-pki-types = { version = "1" }
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
http-body-util = "0.1.0"
form_urlencoded = "1.1.0"
sha1 = "0.11"
sha2 = "0.11"
md5 = "0.8.0"
rayon = "1.5"
parking_lot = "0.12"
regex = "1.7.0"
blake3 = "1.3"
lru-cache = "0.1.2"
rand = "0.9.0"
x509-parser = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
num_cpus = "1.15.0"
chrono = "0.4"
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = "0.9.0"
hashify = { version = "0.2" }
base64 = "0.22"

[features]
test_mode = ["mail-auth/test"]
enterprise = []

#[[bench]]
#name = "hash"
#harness = false
