[package]
name = "spam-filter"
version = "0.16.4"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
types = { path = "../types" }
nlp = { path = "../nlp" }
store = { path = "../store" }
trc = { path = "../trc" }
common = { path =  "../common" }
registry = { path =  "../registry" }
smtp-proto = { version = "0.2", features = ["rkyv"] }
mail-parser = { version = "0.11", features = ["full_encoding"] } 
mail-builder = { version = "0.4" }
mail-auth = { version = "0.8" }
tokio = { version = "1.47", features = ["net", "macros"] }
psl = "2"
hyper = { version = "1.0.1", features = ["server", "http1", "http2"] }
idna = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "stream"]}
decancer = "3.0.1"
unicode-security = "0.1.0"
infer = "0.19"
sha1 = "0.11"
sha2 = "0.11"
compact_str = "0.9.0"
rkyv = { version = "0.8.10", features = ["little_endian"] }
serde = { version = "1.0", features = ["derive"]}
unicode-general-category = "1.1.0"
unicode-normalization = "0.1.25"

[features]
test_mode = []
enterprise = []

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
