[package]
name = "types"
version = "0.13.3"
edition = "2024"
resolver = "2"

[dependencies]
utils = { path = "../utils" }
trc = { path = "../trc" }
jmap-tools = { path = "/Users/me/code/jmap-tool" }
hashify = "0.2"
serde = { version = "1.0", features = ["derive"]}
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = { version = "0.9.0", features = ["rkyv", "serde"] }
blake3 = "1.3.3"


[features]
test_mode = []

