[package]
name = "types"
version = "0.15.3"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
trc = { path = "../trc" }
jmap-tools = { version = "0.1" }
hashify = "0.2"
serde = { version = "1.0", features = ["derive"]}
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = { version = "0.9.0", features = ["rkyv", "serde"] }
blake3 = "1.3.3"


[features]
test_mode = []

