[package]
name = "utils"
version = "0.16.3"
edition = "2024"

[dependencies]
trc = { path = "../trc" }
rustls = { version = "0.23.5", default-features = false, features = ["std", "aws_lc_rs", "tls12"] }
rustls-pemfile = "2.0"
rustls-pki-types = { version = "1" }
rustls-platform-verifier = "0.7"
tokio = { version = "1.47", features = ["net", "macros", "signal"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs", "tls12"] }
serde = { version = "1.0", features = ["derive"]}
mail-auth = { version = "0.8" }
smtp-proto = { version = "0.2" }
ahash = { version = "0.8", features = ["serde"] }
chrono = "0.4"
rand = "0.9.0"
aws-lc-rs = { version = "1" }
base64 = "0.22"
serde_json = "1.0"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "http2", "stream"]}
x509-parser = "0.18"
pem = "3.0"
parking_lot = "0.12"
futures = "0.3"
regex = "1.7.0"
blake3 = "1.3.3"
http-body-util = "0.1.0"
form_urlencoded = "1.1.0"
psl = "2"
quick_cache = "0.6.9"
fast-float = "0.2.0"
rkyv = { version = "0.8.10", features = ["little_endian"] }
compact_str = "0.9.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
farmhash = "1.1.5"
nohash-hasher = "0.2.0"
arcstr = "1.2.0"

[target.'cfg(unix)'.dependencies]
privdrop = "0.5.3"

[features]
test_mode = []

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
